remove health status auth